# StS2-mod

./: .gitignore  AGENTS.md  CLAUDE.md  CardValueOverlay.csproj  CardValueOverlay.json  CardValueOverlay.sln  CardValueOverlay.sln.DotSettings  Directory.Build.props.example  ENVIRONMENT_TODO.md  LOCAL_KNOWLEDGE.md  README.md  ROADMAP.md  StS2Mod.csproj  StS2Mod.json  Sts2PathDiscovery.props  export_presets.cfg  project.godot
CardValueOverlay.Core.Tests/: CardAdoptionCatalogTests.cs  LocalRunHistoryStatsBuilderTests.cs  Program.cs
data/: README.md
history-analysis/: README.md  pyproject.toml
history-analysis/data/: _phase0_floor8_eval20.json  _phase0_floor8_train57.json  dashen_77_act2_start_decks.json  dashen_77_final_decks.json  dashen_77_floor8_decks.json  dashen_77_floor8_random_16_decks.json  dashen_77_preAct2Boss_decks.json  dashen_77_selected_100_decks.json  dashen_77_selected_100_decks_clean_20260701.json  dashen_77_selected_100_unsupported_cards.json  dashen_77_selected_16_decks.json  dashen_77_selected_32_decks.json  dashen_77_selected_32_floor8_8_act2_24_seed20260630.json  dashen_77_selected_40_f16_a16_final8_seed20260630.initial.json  dashen_77_selected_40_f16_a16_final8_seed20260630.json  localized_names_en_zhs.json  regent_v107_wins_filtered_decks.json
history-analysis/src/history_analysis/: __init__.py  analysis.py  cli.py  strategy.py
history-analysis/tests/: test_reports.py
search-policy-training/: README.md  pyproject.toml
search-policy-training/src/search_policy_training/: __init__.py  cli.py  data.py  export.py  ranker.py
search-policy-training/tests/: test_dataset.py  test_training_export.py
(+489 files in other folders)
