[project]
name = "history-analysis"
version = "0.1.0"
description = "Generate reproducible reports for StS2 Regent run history."
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
]

[project.scripts]
history-analysis = "history_analysis.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
